fix: set up the separation of selectors and properties with linebreaks in the css according to rule 3.8 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -51,11 +51,13 @@
   padding: 0px;
 }
 
-.item, .title {
+.item, 
+.title {
   list-style: none;
 }
 
-input, .btn{
+input,
+ .btn{
   outline: none;
 }
 
